--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
     defaultConfig {
-        applicationId "org.mozilla.video"
+        applicationId "org.mozilla.tv"
         minSdkVersion 22
         targetSdkVersion 26
         versionCode 11 // This versionCode is "frozen" for local builds. For "release" builds we
@@ -73,12 +73,7 @@ android {
         focus {
             dimension "product"
 
-            applicationIdSuffix ".focus"
-        }
-        klar {
-            dimension "product"
-
-            applicationIdSuffix ".klar"
+            applicationIdSuffix ".firefox"
         }
 
         // We can build with two engines: webview or gecko
