No issue: disable proguard.
So we can build release builds.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
-            shrinkResources true
+            minifyEnabled false // AmazonWebView is not configured properly.
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         beta {
