--- a/Screengrabfile.template
+++ b/Screengrabfile.template
@@ -9,11 +9,11 @@
 
 use_tests_in_packages ['org.mozilla.focus.activity.screenshots']
 
-app_package_name 'org.mozilla.focus.debug'
+app_package_name 'org.mozilla.tv.firefox.debug'
 use_tests_in_packages ['org.mozilla.focus.activity']
 
-app_apk_path 'app/build/outputs/apk/app-focus-webview-debug.apk'
-tests_apk_path 'app/build/outputs/apk/app-focus-webview-debug-androidTest.apk'
+app_apk_path 'app/build/outputs/apk/app-amazonWebview-debug.apk'
+tests_apk_path 'app/build/outputs/apk/app-amazonWebview-debug-androidTest.apk'
 
 # Clear all previous screenshots locally. Technically not needed in automation.
 # But it's easier to debug this on a local device if there are no old screenshots
