--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,7 +147,7 @@ dependencies {
     testCompile "org.robolectric:robolectric:3.5.1"
     testCompile 'org.mockito:mockito-core:2.12.0'
 
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+//    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 
     androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
