--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -36,7 +36,7 @@ tasks:
           && git config advice.detachedHead false
           && git checkout {{event.head.sha}}
           && echo "--" > .adjust_token
-          && ./gradlew clean assemble lint pmd test
+          && ./gradlew clean assemble lint checkstyle pmd test
       artifacts:
         'public':
           type: 'directory'
@@ -77,7 +77,7 @@ tasks:
           && git config advice.detachedHead false
           && git checkout {{event.head.sha}}
           && echo "--" > .adjust_token
-          && ./gradlew clean assemble lint pmd test
+          && ./gradlew clean assemble lint checkstyle pmd test
       artifacts:
         'public':
           type: 'directory'
