--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ buildscript {
 
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
 
         classpath 'org.ajoberstar:grgit:1.5.0'
