--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
                 includeNoLocationClasses = true
             }
         }
+        unitTests.includeAndroidResources true // for robolectric.
     }
 
     flavorDimensions "engine"
@@ -144,7 +145,7 @@ dependencies {
     geckoCompile(name: 'geckoview-latest', ext: 'aar')
 
     testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.5.1"
+    testCompile "org.robolectric:robolectric:3.7.1"
     testCompile 'org.mockito:mockito-core:2.12.0'
 
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
