--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,9 +95,9 @@ android {
     sourceSets {
         test {
             resources {
-                // Make the default asset folder available as test resource folder. Robolectric seems
-                // to fail to read assets for our setup. With this we can just read the files directly
-                // and do not need to rely on Robolectric.
+                // Make the default asset folder available as test resource folder. This is only
+                // necessary for SearchEngineParserTest.getBasePath, which access the test resources
+                // before RuntimeEnvironment.application is available.
                 srcDir "${projectDir}/src/main/assets/"
             }
         }
