Setting up Fastlane Screenshots with initial test
Configures gradle properties, adds a screengrabfile and an initial test – re-adds a base that was removed in (77ef09b)

Update HomeScreenScreenshots.java

Update gradle.properties

updated listing of currently supported locales

added a android.inject.testOnly comment in gradle.properties

added TODO on HomeScreenScreenshots

Refactored into a collective TVScreenshots script

- Refactored into a collective TVScreenshots script
- Visits first-run and settings for additional screenshots

Revert "Refactored into a collective TVScreenshots script"

This reverts commit 80d4752becc92f8512a2d0f042d795d45903f101.

Revert "Revert "Refactored into a collective TVScreenshots script""

This reverts commit 330288e8168c8e0656f2af5831d378a99bf180cc.

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Android Studio sets android.inject.testOnly automatically on some APKs that are ran from the IDE
+# However on some devices the APK can not be installed. This is a work-around
+android.inject.testOnly = false
