--- a/app/build.gradle
+++ b/app/build.gradle
@@ -121,39 +121,39 @@ repositories {
 }
 
 dependencies {
-    compile "com.android.support:appcompat-v7:$support_libraries_version"
-    compile "com.android.support:customtabs:$support_libraries_version"
-    compile "com.android.support:design:$support_libraries_version"
-    compile "com.android.support:cardview-v7:$support_libraries_version"
-    compile "com.android.support:recyclerview-v7:$support_libraries_version"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:appcompat-v7:$support_libraries_version"
+    implementation "com.android.support:customtabs:$support_libraries_version"
+    implementation "com.android.support:design:$support_libraries_version"
+    implementation "com.android.support:cardview-v7:$support_libraries_version"
+    implementation "com.android.support:recyclerview-v7:$support_libraries_version"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
-    compile "android.arch.lifecycle:extensions:$architecture_components_version"
+    implementation "android.arch.lifecycle:extensions:$architecture_components_version"
 
-    compile ("com.google.code.findbugs:annotations:3.0.1") {
+    implementation ("com.google.code.findbugs:annotations:3.0.1") {
         // We really only need the SuppressFBWarnings annotation, everything else can be ignored.
         // Without this we get weird failures due to dependencies.
         transitive = false
     }
 
-    compile 'org.mozilla.telemetry:telemetry:1.2.0'
+    implementation 'org.mozilla.telemetry:telemetry:1.2.0'
 
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3"
 
-    geckoCompile(name: 'geckoview-latest', ext: 'aar')
+    geckoImplementation(name: 'geckoview-latest', ext: 'aar')
 
-    testCompile 'junit:junit:4.12'
-    testCompile "org.robolectric:robolectric:3.7.1"
-    testCompile 'org.mockito:mockito-core:2.12.0'
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:3.7.1"
+    testImplementation 'org.mockito:mockito-core:2.12.0'
 
-    androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 
-    androidTestCompile "com.android.support.test.espresso:espresso-core:$espresso_version", {
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
-    androidTestCompile("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
+    androidTestImplementation("com.android.support.test.espresso:espresso-contrib:$espresso_version") {
         exclude module: 'appcompat-v7'
         exclude module: 'support-v4'
         exclude module: 'support-annotations'
@@ -162,20 +162,20 @@ dependencies {
         exclude module: 'espresso-core'
     }
 
-    androidTestCompile "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
-    androidTestCompile "com.android.support.test.espresso:espresso-web:$espresso_version", {
+    androidTestImplementation "com.android.support.test.espresso:espresso-idling-resource:$espresso_version"
+    androidTestImplementation "com.android.support.test.espresso:espresso-web:$espresso_version", {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
 
-    androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
-    testCompile 'com.squareup.okhttp3:mockwebserver:3.7.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.7.0'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:3.7.0'
 
-    androidTestCompile "tools.fastlane:screengrab:1.1.0", {
+    androidTestImplementation "tools.fastlane:screengrab:1.1.0", {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     
-    compile files('libs/awv_api/awv_interface.jar')
-    compile files('libs/awv_api/awv_android_factory.jar')
+    implementation files('libs/awv_api/awv_interface.jar')
+    implementation files('libs/awv_api/awv_android_factory.jar')
 }
 
 // -------------------------------------------------------------------------------------------------
