--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ android {
             }
         }
         unitTests.includeAndroidResources true // for robolectric.
+        execution 'ANDROID_TEST_ORCHESTRATOR'
     }
 
     flavorDimensions "engine"
@@ -174,7 +175,10 @@ dependencies {
     androidTestImplementation "tools.fastlane:screengrab:1.1.0", {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
-    
+
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestUtil 'com.android.support.test:orchestrator:1.0.1'
+
     implementation files('libs/awv_api/awv_interface.jar')
     implementation files('libs/awv_api/awv_android_factory.jar')
 }
