Issue #429: Import Sentry secrets into BuildConfig (repurpose Adjust code).
This lets you access the Sentry key from BuildConfig.SENTRY_DSN by
including a <project-dir>/.sentry_dsn file. I tried to configure the way
Sentry recommends (sentry.properties or environment variables) but I
couldn't get these solutions to work, presumably because they're
intended for desktop Java apps.

Note: keys stored in BuildConfig will be accessible via decompliing.
However, it's non-trivial to obfuscate API keys (via
https://stackoverflow.com/a/14572051 and others):
- We can keep them in the open in a compiled APK like this
(partially obfuscated by ProGuard)
- We can try to obfuscate it (either with custom code - not useful
since it's open source - or DexGuard)
- We can retrieve API keys from a server

Given there is little value beyond annoyance for an external party using
this API key, I think it's fine to do it this way (and Adjust does it this
way too).

--- a/.gitignore
+++ b/.gitignore
@@ -55,8 +55,9 @@ infer-out/
 fastlane/
 Screengrabfile
 
-# Adjust token file
-.adjust_token
+# Secrets
+.sentry_dsn_debug
+.sentry_dsn_release
 
 # robotranslations file
 tools/l10n/robotranslations/locales.yaml
