--- a/codecov.yml
+++ b/codecov.yml
@@ -13,8 +13,7 @@ coverage:
        if_not_found: success
     patch:
       default:
-        enabled: yes
-        threshold: 0.2
+        enabled: no
         if_not_found: success
     changes:
       default:
