Closes #764: Add Pocket keys to build.
I uploaded the key files to the Secrets gdrive folder for Fire TV.

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,8 @@ fastlane/
 Screengrabfile
 
 # Secrets
-.sentry_dsn_debug
-.sentry_dsn_release
+.sentry_dsn_*
+.pocket_key_*
 
 # robotranslations file
 tools/l10n/robotranslations/locales.yaml
