--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ apply from: "$project.rootDir/tools/gradle/versionCode.gradle"
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "org.mozilla.tv"
         minSdkVersion 22
