--- a/app/build.gradle
+++ b/app/build.gradle
@@ -141,6 +141,7 @@ dependencies {
     implementation "com.android.support:design:$support_libraries_version"
     implementation "com.android.support:cardview-v7:$support_libraries_version"
     implementation "com.android.support:recyclerview-v7:$support_libraries_version"
+    implementation "com.android.support:leanback-v17:$support_libraries_version"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation "android.arch.lifecycle:extensions:$architecture_components_version"
