Issue #765: Add okhttp.
I decided to use this because:
- HTTPUrlConnection's API sucks and wastes my time
- It's pretty standard in the Android community
- It may be more efficient than HTTPUrlConnection by default: the
official page talks about sharing sockets, connection pooling, and
transparent response caching.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -149,6 +149,8 @@ dependencies {
 
     implementation "android.arch.lifecycle:extensions:$architecture_components_version"
 
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
     implementation ("com.google.code.findbugs:annotations:3.0.1") {
         // We really only need the SuppressFBWarnings annotation, everything else can be ignored.
         // Without this we get weird failures due to dependencies.
