--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,6 +154,7 @@ dependencies {
 
     implementation 'org.mozilla.telemetry:telemetry:1.2.0'
     implementation "org.mozilla.photon:colors:$moz_components_version"
+    implementation "org.mozilla.photon:fonts:$moz_components_version"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3"
