Closes #852 - Add Pocket token from secrets for release builds.

--- a/.taskcluster.yml
+++ b/.taskcluster.yml
@@ -121,6 +121,7 @@ tasks:
           && git config advice.detachedHead false
           && git checkout {{ event.version }}
           && python tools/taskcluster/get-sentry-token.py
+          && python tools/taskcluster/get-pocket-token.py
           && ./gradlew --no-daemon clean test assembleRelease
       artifacts:
         'public':
