--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,6 +150,7 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$architecture_components_version"
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     implementation ("com.google.code.findbugs:annotations:3.0.1") {
         // We really only need the SuppressFBWarnings annotation, everything else can be ignored.
