Issue #744: Set detekt maxIssues to 0.
warning/fail thresholds were deprecated in favor of maxIssues in the
latest version.

Thresholds allow your code to introduce failures and fail arbitrarily:
we should remove them.

Note that this will cause detektCheck to fail on our code.

--- a/quality/detekt.yml
+++ b/quality/detekt.yml
@@ -18,8 +18,7 @@ test-pattern: # Configure exclusions for test sources
     - 'StringLiteralDuplication'
 
 build:
-  warningThreshold: 5
-  failThreshold: 10
+  maxIssues: 0
   weights:
     complexity: 2
     formatting: 1
