Closes #828: Added new AppTheme.Transparent, background color for pocket onboarding, and udpated AndroidManifest to include PocketOnboardingActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
         <activity android:name=".OnboardingActivity"
                   android:theme="@style/AppTheme"/>
 
+        <activity android:name=".home.pocket.PocketOnboardingActivity"
+                  android:theme="@style/AppTheme.Transparent"/>
+
         <meta-data
             android:name="android.webkit.WebView.MetricsOptOut"
             android:value="true" />
