--- a/app/build.gradle
+++ b/app/build.gradle
@@ -145,7 +145,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:$support_libraries_version"
     implementation "com.android.support:recyclerview-v7:$support_libraries_version"
     implementation "com.android.support:leanback-v17:$support_libraries_version"
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support.constraint:constraint-layout:$constrained_layout_version"
 
     implementation "android.arch.lifecycle:extensions:$architecture_components_version"
 
@@ -165,12 +165,12 @@ dependencies {
         transitive = false
     }
 
-    implementation 'org.mozilla.telemetry:telemetry:1.2.0'
+    implementation "org.mozilla.components:telemetry:$moz_components_version"
     implementation "org.mozilla.photon:colors:$moz_components_version"
     implementation "org.mozilla.photon:fonts:$moz_components_version"
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19.3"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlin_coroutines_version"
 
     geckoImplementation(name: 'geckoview-latest', ext: 'aar')
 
