--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ android:
     - tools
     - platform-tools
     - build-tools-27.0.3
-    - android-26
+    - android-27
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
@@ -16,6 +16,7 @@ android:
 sudo: false
 
 before_install:
+  - yes | sdkmanager "platforms;android-27"
   - touch local.properties
 
 script:
