Issue #929: Use browser-session component for browser state.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,8 +147,6 @@ dependencies {
     implementation "com.android.support:leanback-v17:$support_libraries_version"
     implementation "com.android.support.constraint:constraint-layout:$constrained_layout_version"
 
-    implementation "android.arch.lifecycle:extensions:$architecture_components_version"
-
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
     implementation 'com.squareup.picasso:picasso:2.71828', {
         // We temporarily don't include the packaged the support libs to avoid version mismatch.
@@ -165,6 +163,8 @@ dependencies {
         transitive = false
     }
 
+    implementation "org.mozilla.components:session:$moz_components_version"
+    implementation "org.mozilla.components:engine:$moz_components_version"
     implementation "org.mozilla.components:telemetry:$moz_components_version"
     implementation "org.mozilla.photon:colors:$moz_components_version"
     implementation "org.mozilla.photon:fonts:$moz_components_version"
